feat: add pgw-validator-pure-arrow module with Arrow-backed PaymentRepository
New module: pgw-validator-pure-arrow

Architecture (modular DAL):
- ArrowTableLoader: reads Arrow IPC stream -> List<VectorSchemaRoot>
- ArrowMessageTable: typed column access for message table
- ArrowRemittanceTable: typed column access for remittance table
- ArrowTransactionTable: typed column access for transactions table
- ArrowPaymentRepositoryImpl: implements PaymentRepository via pure Arrow/Java
  (regex IBAN check, BigDecimal ctrl sum, per-row field validation - no SQL)
- ArrowPaymentRepositoryLoader: factory to load 3 Arrow files into repository

Tests (all passing):
- ArrowValidationTest: 4 correctness tests (Types D, E, H, J)
- ArrowValidationBenchmarkTest: Types A-J benchmark with peak off-heap
- ValidatorComparisonBenchmarkTest: side-by-side DuckDB SQL vs Arrow Java

Updated .gitignore, root pom.xml, TEST_RESULTS.md, README.md

Agent-Logs-Url: https://github.com/balchua/java-arrow-pain/sessions/c23f035c-91b8-4121-b149-60574b978f74

Co-authored-by: balchua <28750768+balchua@users.noreply.github.com>